# oostubs

./: .gitignore  CMakeLists.txt  Makefile  main.cc
device/: cgastr.cc  cgastr.h  keyboard.cc  keyboard.h  panic.cc  panic.h  watch.cc  watch.h
guard/: gate.h  guard.cc  guard.h  guardian.cc  locker.h  secure.h
isofiles/boot/: system
machine/: cgascr.cc  cgascr.h  cpu.cc  cpu.h  io_port.h  key.h  keyctrl.cc  keyctrl.h  pic.cc  pic.h  pit.cc  pit.h  plugbox.cc  plugbox.h  toc.asm  toc.c  toc.cc  toc.h
meeting/: bell.h  bellringer.cc  bellringer.h  buzzer.cc  buzzer.h  semaphore.cc  semaphore.h  waitingroom.cc  waitingroom.h
object/: chain.h  list.cc  list.h  o_stream.cc  o_stream.h  queue.cc  queue.h  strbuf.cc  strbuf.h
snake/: data.h  keyboard_appl.cc  keyboard_appl.h  player.h  printer.h  snake_appl.cc  snake_appl.h
syscall/: guarded_buzzer.cc  guarded_buzzer.h  guarded_keyboard.cc  guarded_keyboard.h  guarded_organizer.cc  guarded_organizer.h  guarded_scheduler.cc  guarded_scheduler.h  guarded_semaphore.cc  guarded_semaphore.h  thread.h
thread/: coroutine.cc  coroutine.h  customer.h  dispatch.cc  dispatch.h  entrant.h  kickoff.cc  kickoff.h  organizer.cc  organizer.h  scheduler.cc  scheduler.h
user/: appl.cc  appl.h  application1.h  application2.h  loop.cc  loop.h  my_coroutine.h  my_other_coroutine.h
